change video duration, fix header alignment, fix team page images

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -127,6 +127,7 @@ span {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-position: center right;
 }
 
 .hiddenCover {
@@ -509,8 +510,17 @@ a.work-with-us-a, a.work-with-us-a:visited{
   flex-direction: column;
 }
 
+@media screen and (max-width: 480px) {
+  .testimonials-container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    height: 98vh;
+  }
+}
+
 .testimonials-title {
   font-size: 48px;
+  margin-top: 30px;
 }
 
 .testimonial-slider-container {
@@ -676,6 +686,12 @@ a.work-with-us-a, a.work-with-us-a:visited{
   background-repeat: no-repeat;
 }
 
+@media screen and (max-width: 480px) {
+  .team-container {
+    margin-top: 60px;
+  }
+}
+
 .team-caption-container {
   z-index: 0;
   position: relative;
@@ -765,7 +781,8 @@ a.team-button-a, a.team-button-a:visited{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 650px;
+  /* min-height: 650px; */
+  min-height: 780px;
 }
 
 .contact-container-caption {
@@ -796,6 +813,16 @@ a.team-button-a, a.team-button-a:visited{
   width: 500px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .contact-subtitle {
+    margin-bottom: 30px;
+  }
+
+  /* .contact-container {
+    min-height: 775px;
+  } */
 }
 
 .contact-form {
@@ -894,13 +921,19 @@ a.team-button-a, a.team-button-a:visited{
 }
 
 .footer {
-  bottom: 0px;
+  bottom: 40px;
   width: 100%;
 
   height: 20px;
   position: absolute;
   padding-bottom: 60px;
   padding-top: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    bottom: 10px;
+  }
 }
 
 .f-icon-img {
@@ -983,8 +1016,16 @@ a.team-button-a, a.team-button-a:visited{
     visibility: visible;
   }*/
 
+  .navbar-header {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   .navbar-toggle {
     z-index: 5;
+    padding-bottom: 0;
   }
 
   .navbar-brand {
@@ -1122,7 +1163,7 @@ a.team-button-a, a.team-button-a:visited{
   /*************************** HEADER SECTION 480 **********************/
   .navbar-brand {
     padding-top: 0;
-    padding-left: 30px;
+    /* padding-left: 30px; */
   }
 
   .video {
@@ -1161,7 +1202,7 @@ a.team-button-a, a.team-button-a:visited{
   }
 
   .hamburger {
-    padding-right: 30px !important;
+    /* padding-right: 30px !important; */
   }
 
   /********************* HOW WE WORK 480 ************************/
@@ -1501,4 +1542,13 @@ a.team-button-a, a.team-button-a:visited{
   .contact-container-caption{
     margin-bottom: 0px!important;
   }
+}
+
+.collapse.in {
+  display: block;
+}
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+  margin-left: 0;
+  left: 0;
 }
