--- a/react-ui/src/hamburgers.css
+++ b/react-ui/src/hamburgers.css
@@ -6,7 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 15px 15px;
+  /* padding: 15px 15px; */
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
@@ -31,7 +31,7 @@
 .hamburger-box {
   width: 40px;
   height: 24px;
-  display: inline-block;
+  display: block;
   position: relative; }
 
 .hamburger-inner {
